# fenjing-agent

./: .env.example  .gitignore  README.md  agent.py  config.py  demo.py  fenjing_agent.py  google_gemini_node.py  langchain-react-agent.skill  main.py  pyproject.toml  requirements.txt  script.txt  test_api.py  web_server.py
output/: storyboard.txt
static/: index.html
